--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -30,6 +30,8 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 # Methods
 
 <!--Decide on your methods: use "variable analysis" or other appropriate descriptors. Make sure to choose at least one graphical method and at least one numerical method.!-->
+Position is a categorical variable. Pushups is a numerical variable. I will do an analysis that explains push ups based on position.
+
 
 # Results
 
@@ -40,6 +42,11 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 ### Graphical Descriptive Results
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+
+There is pushups on the y-axis of the box plot. While there is the positions on the x-axis. On the box plotm there is a large segment on each whisker plot. The average push-ups for the positions appears to be different. The skill position appears to do more pushups based off of the y-axis. (pushups)
 
 ### Numerical Descriptive Results
 
