--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -62,8 +62,16 @@ The median of the positions is different, whereas the skill is significantly gre
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+The t value is -5.43241. The df value is 27.079. The P value is 0.0000009421. Alt hypothesis is shown; the alternate hypothesis states "true difference in means between group LINE and group SKILL is not equal to 0" The mean for Line is 17.1250 and the mean for Skill is 49.72727.
+
 
 # Discussion and Conclusion
+
+We were presented with a null hypothesis and alternate hypothesis; Null being no difference between the average number of pushups of LINE vs Skill players, and the alternate being the average number of pushups done by the LINE players is statistacally different that that of SKILL players. When checking our findings according to the our methodology, we find that SKILL position players are able to do more pushups opposed to LINE players. They were able to as well perform at a greater mean average and median average. When comparing the inferential results we find that we have a significantly low value of 0.0000009421 which although our null hypothesis is possible we are able to ignore it because of it holds a significantly low value.
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
